tests/reference/ast_new-match_stmt1-9e84d24.stderr
syntax error: Token '0' (of type 'integer') is unexpected here
 --> tests/parser/match_stmt1.py:2:7
  |
2 | match 0:
  |       ^ 
